<resources>
    <string name="app_name">Palaver</string>
    <string name="palaver_text_view">PALAVER</string>
    <string name="benutzername_edit_text">Benutzername</string>
    <string name="passwort_login_edit_text">Passwort</string>
    <string name="login_button">LogIn</string>
    <string name="register_button">Registrieren</string>
    <string name="password_again_edit_text">Passwort (nochmal)</string>
    <string name="registrieren_text_view">Noch keinen Account? Jetzt registrieren.</string>
    <string name="action_bar_logout">Logout</string>
    <string name="add_contact_button">+</string>
    <string name="add_contact_dialog_text_view">Gib den Namen eines Palaver-Nutzers ein, um diesen hinzuzufügen.</string>
    <string name="add_contact_hint">Kontaktname</string>
    <string name="chat_edit_text_hint">Nachricht</string>
    <string name="action_bar_add_contact">+</string>
    <string name="empty_username">Bitte gib einen Nutzernamen ein!</string>
    <string name="wrong_password">Bitte überprüfe dein Passwort!</string>
    <string name="register_username_already_existend">Benutzer existiert bereits</string>
    <string name="invalid_login">Ungültiger Login</string>
    <string name="refresh_action_bar">Refresh</string>
    <string name="refresh_contacts_action_menu">refresh</string>
    <string name="remove_friend_dialog">Freund entfernen?</string>
</resources>
