<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fabian.de.palaver.LogInActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/palaver_text_view"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textSize="55sp"
        android:gravity="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/benutzername_edit_text"
        android:inputType="text"
        android:id="@+id/user_name_login_edit_text"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwort_login_edit_text"
        android:inputType="textPassword"
        android:id="@+id/passwort_login_edit_text"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/login_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_new_user_text_view"
        android:text="@string/registrieren_text_view"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

</LinearLayout>
